--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "vite": "^5.3.1",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "rollup": "^3.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
